--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -296,6 +296,8 @@ $M = \frac{\log 2}{\lambda} \approx \frac{0.7}{\lambda}$
 :::
 ::::::::::::::::::::::::::::::::: 
 
+### ハザード比が意味を持つとき、持たないとき
+
 ::: {.callout-note appearance="simple" title="リスクとハザード比の関係"}
 
 群1と群2のアウトカムを比較する状況を考えましょう。群1の時点$x$の疾患リスクを$\pi_1$、群2の時点$x$の疾患リスクを$\pi_2$とします。さらに、それぞれの群のハザードを$\lambda_1$と$\lambda_2$、生存時間中央値を$M_1$と$M_2$とします。
