--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -244,6 +244,7 @@ summary(fit)
 ```
 :::
 
+### p値に関する一見正しそうな説明
 
 ::: voice-daughter
 私「ハザード比とp値は知ってる。ハザード比は、TH群が基準になってて、ハザード比が1より小さいとき、TH群よりLTA群の方がOSやDFSがいいってこと？p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績が悪かったけど、p値をみると2群に有意差はないんだよね」
