--- a/jp/frequentist-4.qmd
+++ b/jp/frequentist-4.qmd
@@ -332,6 +332,8 @@ print(coverage_400)
 print(coverage_800)
 ```
 
+### 信頼区間アプローチによるサンプルサイズ設計
+
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「ほんとだ、だいたい95%。じゃあ調査人数は何人でもいいってことだ」
