--- a/jp/logistic-regression-3.qmd
+++ b/jp/logistic-regression-3.qmd
@@ -142,140 +142,181 @@ a:hover {
 # Story and Quiz − Adjusting for bias III
 
 ::: serif-block
-　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, generalized linear model, estimation
+　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, generalized linear model, confounding/information-bias/selection-bias
 :::
 
 ------------------------------------------------------------------------
 
-### 数式を使ってロジスティック回帰を教えてよ
+### ロジスティック回帰で「調整する」ってどういうこと？
 
 ::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「お父さん、ロジスティック回帰でわからないことがあるんだけど。以前、観察研究では交絡因子を調整しないといけない、とかいってたよね」
+::: 
+
 ::: voice-father
-お父さん「ロジスティック回帰はね、医学研究でよく使うから知っておいた方がいいよ。簡単にいうと、2値データのための回帰モデルの一種。ストーマ造設、年齢、性別、年収といった共変量が、復職の有無のような2通りの値をとるアウトカムとどの程度相関するかを、調べることができる」
+お父さん「ああ、そんな話もあったね」
 ::: 
 
 ::: voice-daughter
-私「もうちょっと統計っぽく教えてよ」
+私「でもさ、調整しないオッズ比も計算できるでしょ。どっちが正しいのかってどうやればわかるの？統計学の本を読んでも、書いてなくて」
 ::: 
 
 ::: voice-father
-お父さん「ん？統計手法には、パラメトリック法とノンパラメトリック法があるけど、ロジスティック回帰はパラメトリックモデルの一種として位置づけられる。最近の教科書では、一般化線型モデルのひとつとして扱われることが多いかな」
+お父さん「それは統計学だけではわからない問題なんだ。データがどんな確率分布に従っているか、誰も知らないからね。因果推論や医学知識を使って判断すべき問題になる」
 ::: 
 
 ::: voice-daughter
-私「そういうんじゃなくてさ。最初から順序立てて教えてほしいっていうか」**
+私「なにそれ？統計学の話じゃないの？ロジスティック回帰について聞いてるんだけど」
 ::: 
 
 ::: voice-father
-お父さん「数式使っていいの？」
+お父さん「そう思うよねえ。じゃあちょっと時間をかけて説明させてよ。」
+:::
+
+::: voice-daughter
+私「いいけど」
+::: 
+
+::: voice-father
+お父さん「疫学の分野での話なんだけどね。40年前に、コーヒーが膵がんを増やすんじゃないか、っていう論文がでたことがある」
 ::: 
 
 ::: voice-daughter
-私「うん。数式でてくると、ところどころわからないんだけど。ごまかされるのもいやだから、一度正式な説明を聞いてみたいって思って」
+私「いかにもありそうな話だね」
 ::: 
 
 ::: voice-father
-お父さん「じゃあ定義から話すかな」
+お父さん「そうでしょ。でも、疫学研究では、コーヒーを飲んでいる人のような曝露集団と、うまく比較できるようなコントロールを選ぶことは、ほとんどの場合難しい。だから、疫学の教科書では、コントロールと比較するときには、第3の因子が隠れていないかどうかに注意しなければいけないと書いてある」
+::: 
+
+::: voice-daughter
+私「ふんふん」
+::: 
+
+::: voice-father
+お父さん「それでは問題です。コーヒーと膵がんの論文で、実際に問題になった第3の因子はなんでしょう？」
+::: 
+
+::: voice-daughter
+私「え？えーっと」
+::: 
+
+![図2.png](logistic-regression-1.png)
+
+::: voice-father
+お父さん「答えはこちら」
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note appearance="simple" title="ロジスティック回帰"}
+::: {.callout-note appearance="simple" collapse="true" title="お父さんの答えは？"}
+それは喫煙です。当時は今より喫煙率が高くて、ほとんどの方がコーヒーと一緒にたばこを吸っていたそうです。
 
-アウトカム$Y_1,Y_2,...,Y_N$が、0または1で表される個人の反応の有無を表す2値変数で、$\Pr (Y_i=1)=\pi_i$という確率で独立に分布しているとします。このとき$N$人の対象者の同時分布は
-
-$\Pr (Y_1=y_1,...,Y_N=y_N)=\prod_{i=1}^N {\pi_i}^{y_i} (1-\pi_i)^{1-y_i}$
-
-という2項分布の積の形で表現できます。
-
-この分布は、個人レベルの$N$個のパラメータ$\pi_i$によって規定されます。しかし、そのすべてを推定したいわけではありません。$\pi_i$に関連する$p-1$個の共変量$X_{i,1},X_{i,2},...,X_{i,p-1}$が測定されており、両者の関連の強さに関心があるとします。このとき
-
-$\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i,1}+...+\beta_{p-1}X_{i,p-1}$
-
-という関係が成り立つ確率分布をロジスティック回帰といいます。
-
-この式の係数$\beta_0,\beta_1,...,\beta_{p-1}$を回帰係数（regression coefficients）、特に$\beta_0$を切片項（intercept）といいます。正規分布は平均と分散というパラメータで形状が決まりますよね。それと同じように、ロジスティック回帰の確率分布は、回帰係数というパラメータによって規定されます。
-
+![図1.png](logistic-regression-3.png)
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「ふむふむ。まず、**$Y_1,Y_2,...,Y_N$っていうのは、$N$人の対象者の復職の有無みたいなものね。その同時分布の式が出てきた。つまり、ロジスティック回帰も、確率分布の一種なんだ」
+私「へえ、そんな話があったんだ」
 ::: 
 
 ::: voice-father
-お父さん「そう。ただし、確率分布の式に、共変量$X_{i,1},X_{i,2},...,X_{i,p-1}$が含まれていて、アウトカムと共変量の関連の強さを、回帰係数が決めるんだ。確率分布に含まれる未知数のことを、統計学ではパラメータと呼んでいる。そしてパラメータの関数として、確率分布を書くことができるものを、パラメトリックモデルっていうんだ。こういう風に考えると、パラメータを推定したり、推定値に信頼区間をつけたりすることが、統計解析の目標になるよね。もうひとつ知っておいてほしいのが、アウトカムと共変量の関係は、ロジット関数で結びつくと仮定していること」
+お父さん「じゃあさ、こういう第3の因子を無視して解析してしまうとどうなる？」
 ::: 
 
-::::::::::::::::::::::::::::::::: 
+::: voice-daughter
+私「それくらいわかるよ。バイアスが生じるんでしょ」
+::: 
 
-::: {.callout-note appearance="simple" title="リンク関数とロジット関数"}
+::: voice-father
+お父さん「そういうこと。こういう因子は、疫学では交絡因子（confounder）と呼ばれているんだけど、ロジスティック回帰で調整しないといけない。調整したときとしないときで、まったく違った結果が得られるっていう数値例を示そう」
+:::
+:::::::::::::::::::::::::::::::::
 
-個人レベルのパラメータと共変量との関係を結びつける1対1の単調な変換
 
-$g(\pi_i)=\beta_0+\beta_1X_{i,1}+...+\beta_{p-1}X_{i,p-1}$
+::: {.callout-note appearance="simple" title="Simpsonのパラドックス"}
 
-のことを、一般にリンク関数（link function）といいます。ロジスティック回帰のリンク関数は、定義で述べた通り
+コーヒーと膵がんの数値例を用いて、統計学でいう調整とはどういう操作のことなのかみてみましょう。ここでは層別解析を用いて説明しますが、ロジスティック回帰でオッズ比を求めたときも、同じ計算結果になります（交互作用をうまく入れる必要がありますが）。
 
-$g(\pi_i)=\log(\frac{\pi_i}{1-\pi_i})$
+表1は、コーヒーと膵がんを想定した仮想データです。コーヒー摂取群とコーヒー非摂取群で、それぞれ膵がん発生ありとなしが調べられています。膵がんを発生したのはそれぞれの群で15人と12人、膵がんがなかったのは365人と868人です。オッズ比を計算してみましょう。コーヒー摂取群では膵がんリスクは3.9%で、コーヒーを摂取しない群の1.4%に比べて、オッズ比は3倍です。これは、コーヒーを摂取すると、膵がんリスクが高くなることを意味しています。
 
-です。この関数はロジット関数と呼ばれ、ロジスティック回帰を特徴付けています。
+表2には、交絡因子（喫煙）によって対象者を層別した結果が示されています。ここから膵がんのオッズ比を求めるとどうなるでしょうか。コーヒー摂取でも非摂取でもリスクは同じですよね。つまりオッズ比は1倍です。
+
+このように、調整前後で、関連の程度が変わる現象を、Simpsonのパラドックスといいます（Simpson 1951）。
+
+表1. 層別前の膵がんリスクとオッズ比
+
+|              | コーヒー摂取 | コーヒー非摂取 | オッズ比 |
+|--------------|--------------|----------------|----------|
+| 合計         |              |                |          |
+| 　膵がんあり | 15           | 12             |          |
+| 　膵がんなし | 365          | 868            |          |
+| 　リスク     | 3.9%         | 1.4%           | 3倍      |
+
+表2. 層別後の膵がんリスクとオッズ比
+
+|              | コーヒー摂取 | コーヒー非摂取 | オッズ比 |
+|--------------|--------------|----------------|----------|
+| 喫煙         |              |                |          |
+| 　膵がんあり | 14           | 4              |          |
+| 　膵がんなし | 266          | 76             |          |
+| 　リスク     | 5.0%         | 5.0%           | 1倍      |
+| 非喫煙       |              |                |          |
+| 　膵がんあり | 1            | 8              |          |
+| 　膵がんなし | 99           | 792            |          |
+| 　リスク     | 1.0%         | 1.0%           | 1倍      |
 
 :::
 
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「単に関数に名前をつけただけでしょ。もうちょっと解説が欲しいなあ」**
-::: 
-
-::: voice-father
-お父さん「そうだよね。ロジット関数も関数の一種だから、グラフにした方が特徴がつかみやすい。次の説明だとどうかな」
-::: 
-::::::::::::::::::::::::::::::::: 
-
-::: {.callout-note appearance="simple" title="ロジット関数の形状"}
-
-仮に共変量が1個で、連続データだったとしましょう。確率$\pi_i$と共変量$X_i$の関係は、ロジット関数を通じて
-
-$\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i}$
-
-という式で表されることになります。
-
-図は、このロジット関数の$\exp(\beta_1)$の値を5、10、20、200と設定して、$X_i$を0から1までの範囲で変化させたプロットです。$\exp(\beta_1)$は、$X_i$が1SD変化したときのオッズ比に相当します。つまり、図でもっとも傾きの小さい黒い曲線は、オッズ比5のときのものです。この曲線はそれほど変化が急にはみえませんが、医学研究ではオッズ比5でもかなり強い関連です。
-
-このように、ロジット関数はS字型の曲線を表しています。X軸方向にどんな値をとったとしても、Y軸方向の変化は0から1の範囲に収まることが、特徴のひとつです。そして、曲線の傾きは回帰係数$\beta_1$によって決まります。
-
-![プレゼンテーション1.png](logistic-regression-3.png)
-
-:::
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「やっとイメージがわいた。ロジット関数って、確率と共変量との関係を表してるんだ。どれくらい年齢が上がると、復職できる確率が下がるか、みたいなことね」
+私「へー。単純な解析ではリスク因子なのに、層別解析では関連が消えた。こんなことあるんだ」
 ::: 
 
 ::: voice-father
-お父さん「そういうこと」
+お父さん「そう、交絡因子を無視して、間違った研究結果を報告してしまうとまずいでしょ。もうひとつ注目してほしいのが、喫煙とコーヒーの関連。喫煙状況ごとにコーヒー摂取割合を計算してみてよ」
+::: 
+
+::: voice-daughter
+私「コーヒー摂取割合ね。層別前は30%。喫煙集団では78%、非喫煙集団では11%だよ」**
+::: 
+
+::: voice-father
+お父さん「うん、喫煙群と非喫煙群でコーヒー摂取割合に大きな差があるでしょ。この現象が起きた理由は、コーヒー摂取と喫煙に強い関連があったため、ということ。もし仮に、 コーヒー摂取・非摂取という介入をランダムに割付けるランダム化介入試験を行ったらどうなると思う？」
+::: 
+
+::: voice-daughter
+私「両群で喫煙割合は、ほぼ同じになるはず」
+::: 
+
+::: voice-father
+お父さん「うん。そうすると、ランダム化介入試験で得られるオッズ比は、喫煙・非喫煙別の結果を平均することになるから、全体でも1倍に近い結果になると予想される。つまり、層別する前のオッズ比3倍という結果は、コーヒーではなく喫煙が真の原因となって生じた見かけの関連なので、層別した後のオッズ比が正しい。だから、ロジスティック回帰で調整オッズ比を求めるべきなんだ」
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-脳卒中発症の有無をアウトカム、LDLコレステロールを共変量としてロジスティック回帰を当てはめたとします。LDLコレステロールの単位をmg/dLからmmol/Lに変換したとき、オッズ比は何倍になるでしょうか。ただし
+ロジスティック回帰のリンク関数は、ロジット関数以外のものを代わりに使うことができます（これを一般化線型モデルといいます）。リンク関数をうまく指定することによって、オッズ比以外の関連の指標を求められることが知られています。
 
-LDLコレステロール(mmol/L) =LDL コレステロール(mg/dL) ×0.02586
+次の指標のうち、対応するリンク関数がなく、求められないものはどれでしょうか。
 
-という関係が成り立ちます。
-
-1.  0.02586倍
-2.  1/0.02586倍
-3.  変化しない
-4.  1、2、3すべて誤り
+1.  リスク差
+2.  リスク比
+3.  ハザード比
+4.  1、2、3すべて求めることができる
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
-**正解は4です。**
+-   **正解は4です**
 
-これは単位を換算にするにはどうすればよいかという問題です。ある共変量*X*の効果は、回帰係数*β*との積（*βX*）で表され、それは共変量の単位によらず一定ですよね。このことに気づくと、答えに近づきます。*X*の単位を定数倍すると、*β*は定数分の一に換算されます。ただし、ロジスティック回帰では、回帰係数からロジット関数を経由してオッズ比を求めるため、単位を換算するには、1/0.02586乗のようにべき乗の操作をすることになります。
+一般化線型モデルはロジスティック回帰を一般化したもので、「リンク関数」を変えることで、さまざまな指標を計算できます（田中2022）。
+
+リスク差を求めるには、g(π)=π つまり恒等関数を指定します。
+
+リスク比を求めるには、g(π)=log⁡(π) つまり対数関数を指定します。
+
+ハザード比を求めるには、g(π)=log{-log⁡(1-π)} つまり補2重対数（complementary log log）関数を指定します。
 :::
 
 ### Continuation of their story
