--- a/jp/logistic-regression-4.qmd
+++ b/jp/logistic-regression-4.qmd
@@ -147,160 +147,137 @@ a:hover {
 
 ------------------------------------------------------------------------
 
-### ロジスティック回帰の計算ができない理由
+### 数式を使ってロジスティック回帰を教えてよ
 
 ::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「ロジスティック回帰はね、医学研究でよく使うから知っておいた方がいいよ。簡単にいうと、2値データのための回帰モデルの一種。ストーマ造設、年齢、性別、年収といった共変量が、復職の有無のような2通りの値をとるアウトカムとどの程度相関するかを、調べることができる」
+::: 
+
 ::: voice-daughter
-私「ロジスティック回帰についてなんだけど。ロジット関数のグラフでイメージはわいたんだけどさ。がんサバイバー調査だと、ロジスティック回帰は2群を比較するとき使うんだよね」
+私「もうちょっと統計っぽく教えてよ」
 ::: 
 
 ::: voice-father
-お父さん「そうだったね。じゃあ、続けてロジスティック回帰の下で、2人の対象者を比べるとどうなるかって話をするね」
+お父さん「ん？統計手法には、パラメトリック法とノンパラメトリック法があるけど、ロジスティック回帰はパラメトリックモデルの一種として位置づけられる。最近の教科書では、一般化線型モデルのひとつとして扱われることが多いかな」
 ::: 
-:::::::::::::::::::::::::::::::::
 
-
-::: {.callout-note appearance="simple" title="回帰係数とオッズ比の関係"}
-
-共変量が1個のとき、ロジスティック回帰は
-
-$\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i}$
-
-と表すことができます。そして、対象者$i=1$では$X_{1}=0$、対象者$i=2$では$X_{2}=1$という値をとる状況を考えてみましょう。それぞれの対象者の共変量の値を、上の式に代入すると、以下のようになります。
-
-$\log(\frac{\pi_1}{1-\pi_1})=\beta_0$
-
-$\log(\frac{\pi_2}{1-\pi_2})=\beta_0+\beta_1$
-
-ここで、$\pi_1$は対象者1の確率パラメータ、$\pi_2$は対象者2の確率パラメータです。これらの確率パラメータから、オッズ比を求めるとどうなるでしょうか。それは、以下の式で計算されます。
-
-$(\frac{\pi_2}{1-\pi_2})\div(\frac{\pi_1}{1-\pi_1})=\exp(\beta_0+\beta_1)\div \exp(\beta_0)=\exp(\beta_1)$
-
-この結果は、回帰係数$\beta_1$の指数をとるとオッズ比が得られることを意味しています。
-
-:::
-
-::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「なるほど、回帰係数からオッズ比を計算できるってこういうことなのね」**
+私「そういうんじゃなくてさ。最初から順序立てて教えてほしいっていうか」**
 ::: 
 
 ::: voice-father
-お父さん「このオッズ比の計算ができるのは、ロジット関数の特徴によるものでしょ。だから、ロジスティック回帰はオッズ比のモデルともいえるんだ」
+お父さん「数式使っていいの？」
 ::: 
 
 ::: voice-daughter
-私「前の話だと、Cox回帰はハザード比のモデルなんだっけ？」
+私「うん。数式でてくると、ところどころわからないんだけど。ごまかされるのもいやだから、一度正式な説明を聞いてみたいって思って」
 ::: 
 
 ::: voice-father
-お父さん「そういうこと。リスク比にはリスク比のモデルがあるし、リスク差にはリスク差のモデルがある。リンク関数はそれぞれ別の関数になる」
-::: 
-
-::: voice-daughter
-私「じゃあ最後にさ、完全分離について説明してくれない？この前の解析で、なにが起きたのか知りたいんだよね」
+お父さん「じゃあ定義から話すかな」
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note appearance="simple" title="ロジスティック回帰の推定"}
+::: {.callout-note appearance="simple" title="ロジスティック回帰"}
 
-**推定に用いられる関数**
+アウトカム$Y_1,Y_2,...,Y_N$が、0または1で表される個人の反応の有無を表す2値変数で、$\Pr (Y_i=1)=\pi_i$という確率で独立に分布しているとします。このとき$N$人の対象者の同時分布は
 
-先ほど述べたアウトカム$Y_1,Y_2,...,Y_N$の同時確率の式に、データ$y_1,y_2,...,y_N$を代入すると、$\pi_i$の式が得られます。ただし、$\pi_i$は$\beta_0,\beta_1,...,\beta_{p-1}$の関数です。したがって、同時確率の式は、$L(\beta_0,\beta_1,...,\beta_{p-1})$というように、$\beta_0,\beta_1,...,\beta_{p-1}$の関数とみなすことができます。この関数を尤度関数といいます。
+$\Pr (Y_1=y_1,...,Y_N=y_N)=\prod_{i=1}^N {\pi_i}^{y_i} (1-\pi_i)^{1-y_i}$
 
-ロジスティック回帰の回帰係数は、この尤度関数を最大化する値として計算されます。ただし、データから必ずしも解が求まるわけではありません。計算が収束しなかったり、不安定になったりする理由は、主に二通り考えられます。
+という2項分布の積の形で表現できます。
 
-**完全分離**
+この分布は、個人レベルの$N$個のパラメータ$\pi_i$によって規定されます。しかし、そのすべてを推定したいわけではありません。$\pi_i$に関連する$p-1$個の共変量$X_{i,1},X_{i,2},...,X_{i,p-1}$が測定されており、両者の関連の強さに関心があるとします。このとき
 
-一つ目は、完全分離（complete separation）や擬似完全分離（quasi-complete separation）です。完全分離とは、
+$\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i,1}+...+\beta_{p-1}X_{i,p-1}$
 
-$\log(\frac{\hat\pi_i}{1-\hat\pi_i})=\hat\beta_0+\hat\beta_1X_{i,1}+...+\hat\beta_{p-1}X_{i,p-1}$
+という関係が成り立つ確率分布をロジスティック回帰といいます。
 
-を計算したとき、その値によって、$Y_1,Y_2,...,Y_N$を100%の精度で0または1に判別できてしまう状況のことをいいます。擬似完全分離は、100%ではないものの、完全分離と同様に共変量からアウトカムが判別できてしまう状況です。別の言葉でいえば、共変量の情報に比べて、データに含まれる情報が不足していて、実質的にランダム性がないということを意味します。つまり、完全分離や擬似完全分離は、サンプルサイズに比べ、共変量の数が多すぎるときに生じます。
+この式の係数$\beta_0,\beta_1,...,\beta_{p-1}$を回帰係数（regression coefficients）、特に$\beta_0$を切片項（intercept）といいます。正規分布は平均と分散というパラメータで形状が決まりますよね。それと同じように、ロジスティック回帰の確率分布は、回帰係数というパラメータによって規定されます。
 
-**多重共線性**
-
-二つ目は、多重共線性（multi-colinearity）です。これは、共変量同士の相関が強すぎることを意味します。仮に、年収が年齢に完全に比例する状況（つまり相関が1）を考えてみてください。このとき、ロジスティック回帰を用いて年収と年齢の影響を分離することはできません。これが多重共線性の一例です。言い換えると、相関の高い共変量は、推定が不安定になるため同時にロジスティック回帰に含めるべきではありません。
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「あれ？回帰分析って最小2乗法を使うんじゃないの？尤度関数？」
+私「ふむふむ。まず、**$Y_1,Y_2,...,Y_N$っていうのは、$N$人の対象者の復職の有無みたいなものね。その同時分布の式が出てきた。つまり、ロジスティック回帰も、確率分布の一種なんだ」
 ::: 
 
 ::: voice-father
-お父さん「大学の教科書ではそう教わるけどね。最小2乗法を使うのは連続データのときだけかな。別の推定方法もいろいろある」
+お父さん「そう。ただし、確率分布の式に、共変量$X_{i,1},X_{i,2},...,X_{i,p-1}$が含まれていて、アウトカムと共変量の関連の強さを、回帰係数が決めるんだ。確率分布に含まれる未知数のことを、統計学ではパラメータと呼んでいる。そしてパラメータの関数として、確率分布を書くことができるものを、パラメトリックモデルっていうんだ。こういう風に考えると、パラメータを推定したり、推定値に信頼区間をつけたりすることが、統計解析の目標になるよね。もうひとつ知っておいてほしいのが、アウトカムと共変量の関係は、ロジット関数で結びつくと仮定していること」
 ::: 
 
+::::::::::::::::::::::::::::::::: 
+
+::: {.callout-note appearance="simple" title="リンク関数とロジット関数"}
+
+個人レベルのパラメータと共変量との関係を結びつける1対1の単調な変換
+
+$g(\pi_i)=\beta_0+\beta_1X_{i,1}+...+\beta_{p-1}X_{i,p-1}$
+
+のことを、一般にリンク関数（link function）といいます。ロジスティック回帰のリンク関数は、定義で述べた通り
+
+$g(\pi_i)=\log(\frac{\pi_i}{1-\pi_i})$
+
+です。この関数はロジット関数と呼ばれ、ロジスティック回帰を特徴付けています。
+
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「ふーん。新しい方法がいろいろありそうってのは知ってるよ。AIとか機械学習とか」
+私「単に関数に名前をつけただけでしょ。もうちょっと解説が欲しいなあ」**
 ::: 
 
 ::: voice-father
-お父さん「まあね。はやりだよね」
+お父さん「そうだよね。ロジット関数も関数の一種だから、グラフにした方が特徴がつかみやすい。次の説明だとどうかな」
 ::: 
+::::::::::::::::::::::::::::::::: 
 
+::: {.callout-note appearance="simple" title="ロジット関数の形状"}
+
+仮に共変量が1個で、連続データだったとしましょう。確率$\pi_i$と共変量$X_i$の関係は、ロジット関数を通じて
+
+$\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i}$
+
+という式で表されることになります。
+
+図は、このロジット関数の$\exp(\beta_1)$の値を5、10、20、200と設定して、$X_i$を0から1までの範囲で変化させたプロットです。$\exp(\beta_1)$は、$X_i$が1SD変化したときのオッズ比に相当します。つまり、図でもっとも傾きの小さい黒い曲線は、オッズ比5のときのものです。この曲線はそれほど変化が急にはみえませんが、医学研究ではオッズ比5でもかなり強い関連です。
+
+このように、ロジット関数はS字型の曲線を表しています。X軸方向にどんな値をとったとしても、Y軸方向の変化は0から1の範囲に収まることが、特徴のひとつです。そして、曲線の傾きは回帰係数$\beta_1$によって決まります。
+
+![プレゼンテーション1.png](logistic-regression-4.png)
+
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「統計学と機械学習ってどう違うの？同じ？」
+私「やっとイメージがわいた。ロジット関数って、確率と共変量との関係を表してるんだ。どれくらい年齢が上がると、復職できる確率が下がるか、みたいなことね」
 ::: 
 
 ::: voice-father
-お父さん「お隣さんって感じかな。データを解析するって意味では同じことをしているわけだし、機械学習の教科書でも、ロジスティック回帰とかロジスティック判別とかは扱うもの。統計学で習うROC曲線なんかは、機械学習の範疇な気がするし。重なる部分は多いよ。まあ、機械学習の方がたくさんのパラメータを推定する傾向にあるとはいえるかな。ロジスティック回帰よりニューラルネットワークの方が、モデルも複雑だし、パラメータの数も多い。さっき共変量の数を減らそうっていったでしょ。機械学習では、ああいうパラメータの数を減らすって発想はしない」
+お父さん「そういうこと」
 ::: 
-
-::: voice-daughter
-私「パラメータの数が少ないのが統計学の特徴ってわけ？」
-::: 
-
-::: voice-father
-お父さん「うーん、でもそれは程度問題かもしれない。一番の違いはなんだろうね。統計学は、統計的推測が基礎にあるってことかな。統計的推測っていうのは、標本から母集団を調べるっていう考え方のこと。手法でいうと、p値とか信頼区間とか、ああいうやつね。パラメータの数が多すぎると、これらの手法は性能が下がるんだ」
-::: 
-
-::: voice-daughter
-私「機械学習に統計的推測って考え方はないの？」
-::: 
-
-::: voice-father
-お父さん「機械学習やってる人も統計学は学んでいるから、ないとはいわないけど、あんまりこだわってないんじゃない？画像認識するとき、p値なんていらないでしょ」
-::: 
-
-::: voice-daughter
-私「そういうもんかな。まあいいや、疲れてきたし。性別のオッズ比が無限大になった理由はわかったよ。尤度関数にデータを代入したら、回帰係数の解が変になるような式になったってわけね」
-::: 
-
-::: voice-father
-お父さん「ん？思ったより芯を食った説明ができてるじゃない。さすがだね」
-::: 
-
-:::::::::::::::::::::::::::::::::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-ロジスティック回帰のリンク関数は、ロジット関数以外のものを代わりに使うことができます（これを一般化線型モデルといいます）。リンク関数をうまく指定することによって、オッズ比以外の関連の指標を求められることが知られています。
+脳卒中発症の有無をアウトカム、LDLコレステロールを共変量としてロジスティック回帰を当てはめたとします。LDLコレステロールの単位をmg/dLからmmol/Lに変換したとき、オッズ比は何倍になるでしょうか。ただし
 
-次の指標のうち、対応するリンク関数がなく、求められないものはどれでしょうか。
+LDLコレステロール(mmol/L) =LDL コレステロール(mg/dL) ×0.02586
 
-1.  リスク差
-2.  リスク比
-3.  ハザード比
-4.  1、2、3すべて求めることができる
+という関係が成り立ちます。
+
+1.  0.02586倍
+2.  1/0.02586倍
+3.  変化しない
+4.  1、2、3すべて誤り
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は4です**
+**正解は4です。**
 
-一般化線型モデルはロジスティック回帰を一般化したもので、「リンク関数」を変えることで、さまざまな指標を計算できます（田中2022）。
-
-リスク差を求めるには、g(π)=π つまり恒等関数を指定します。
-
-リスク比を求めるには、g(π)=log⁡(π) つまり対数関数を指定します。
-
-ハザード比を求めるには、g(π)=log{-log⁡(1-π)} つまり補2重対数（complementary log log）関数を指定します。
+これは単位を換算にするにはどうすればよいかという問題です。ある共変量*X*の効果は、回帰係数*β*との積（*βX*）で表され、それは共変量の単位によらず一定ですよね。このことに気づくと、答えに近づきます。*X*の単位を定数倍すると、*β*は定数分の一に換算されます。ただし、ロジスティック回帰では、回帰係数からロジット関数を経由してオッズ比を求めるため、単位を換算するには、1/0.02586乗のようにべき乗の操作をすることになります。
 :::
 
-### 文献
-
-- [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
 
 ### Continuation of their story
 
