--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -242,6 +242,8 @@ a:hover {
 :::::::::::::::::::::::::::::::::
 
 
+### 生存時間解析と競合リスク解析
+
 ::: {.callout-note appearance="simple" title="シミュレーションデータ（再発あり）の生成"}
 前回より少しだけがんの臨床研究を意識して、シミュレーションデータにおける、全生存期間（OS）・無再発生存期間（RFS）・累積再発率（CIR）の違いをみてみましょう。CIRの解析では、再発の前に死亡した患者が存在するため、その扱いを決める必要があります。これを競合リスク（competing risk）といいます。
 
