--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -215,7 +215,13 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「情報が偏ったらバイアスっていうのはわかるけど。死亡が特定できないのはどうしようもないときだもの。ベストを尽くすしかないよね。私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」
+私「情報が偏ったらバイアスっていうのはわかるけど。死亡が特定できないのはどうしようもないときだもの。ベストを尽くすしかないよね」
+:::
+
+### Kaplan-Meier曲線のバイアス
+
+::: voice-daughter
+私「私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」
 :::
 
 ::: voice-father
@@ -227,7 +233,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「前に使ったRスクリプトをいじるだけですぐ終わるから。シミュレーションデータでバイアスを見せてあげるよ」
+お父さん「前に使ったRスクリプトをいじるだけですぐ終わるから。シミュレーションデータで統計的なバイアスってどんなものか見せてあげるよ」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -355,6 +361,8 @@ print(km_panel)
 ::: voice-daughter
 私「なるほどね。再発確率と死亡確率の和が1を超えることはあり得ないってことは、Kaplan–Meier曲線にバイアスが生じていることの証拠だっていいたいのね。でも、こんなマニアックなバイアスじゃなくて、調査を行う上で何に注意した方がいいか聞いたつもりだったんだけど」
 :::
+
+### バイアスの分類
 
 ::: voice-father
 お父さん「調査票を郵送するんでしょ。そういうとき、**回答してくれない患者が多いと偏りが生じやすい**から、回答率を挙げる工夫をするといい。たとえば、調査票で年収って聞いてる？」
