--- a/jp/frequentist-5.qmd
+++ b/jp/frequentist-5.qmd
@@ -235,7 +235,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 ::: voice-father
 お父さん「そうだね。でも、正確にいうと、αエラー・βエラーは"統計学的に有意"とかp値とかとは、直接関係する概念じゃない。別に、効果があるかどうか判定する基準は、p値じゃなくてもいいわけだからね。ポイントはね、
 
->> p\<0.05は、αエラーだけをコントロールする基準
+> p\<0.05は、αエラーだけを制御する基準
 
 だってこと」
 :::
@@ -247,6 +247,8 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 
 ややこしいのですが、JCOG9502では症例登録に予定より時間がかかったため、有意水準10%、つまり全生存期間の片側p値を0.1と比べる方式が採用されました。この方式では、LTAに延命効果がなくても、100回に10回はαエラーが生じてしまい、LTAが有効と判定してしまうことになります。つまり、有意水準が5%から10%に高くなると、判断を誤る確率が増える代わりに、サンプルサイズが小さくて済むわけです。
 :::
+
+### サンプルサイズ設計によるβエラーの制御
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
@@ -272,7 +274,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 ::: voice-father
 お父さん「そういうこと。βエラーは0.1か0.2が一般的かな。米国SWOGの統計家たちは、教科書で以下のように述べている（Green, et al. 2013）。
 
->> 新しい治療法が見つかることはさほど多くないため、我々は原則として90%の検出力を推奨している
+> 新しい治療法が見つかることはさほど多くないため、我々は原則として90%の検出力を推奨している
 
 検出力90%はβエラー0.1のことね」
 :::
