--- a/jp/logistic-regression-1.qmd
+++ b/jp/logistic-regression-1.qmd
@@ -237,11 +237,11 @@ glm(y ~ x1 + x2, family = binomial(), data = dat)
 - リンク関数（平均をどう変換して線型にするか）
 
 ::: voice-daughter
-私「で、それが`family`、`link`、`y ~ x1 + x2`なの？」
+私「で、それが`family`、`y ~ x1 + x2`、`link`なの？」
 ::: 
 
 ::: voice-father
-お父さん「そう。`glm()`は、確率分布+リンク+回帰係数×共変量を指定してるだけなんだ」
+お父さん「そう。`glm()`は、確率分布+回帰係数×共変量+リンクを指定してるだけなんだ」
 ::: 
 
 ::: voice-daughter
@@ -259,9 +259,7 @@ X <- model.matrix(~ x1 + x2, data = dat)
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「最初の列はすべて1でしょ。これは回帰直線でいう切片のこと。次の列以降はx1とx2の値だよね。
-ちょっとマニアックだけど、Rの内部では、`model.matrix()`っていう関数で、デザイン行列Xを作っている。
-こうしておくと、たとえばx1が文字列だったときに計算できたり、回帰係数との掛け算が、行列計算になって都合がいい」
+お父さん「ちょっとマニアックだけど、Rの内部では、`model.matrix()`っていう関数で、デザイン行列Xを作っている。Xの最初の列はすべて1になる。これは回帰直線でいう切片に対応している。次の列以降はx1とx2に対応する値が計算される。こうしておくと、たとえばx1が文字列だったときに計算できたり、回帰係数との掛け算が、行列計算になって都合がいい。ここまで覚えなくていいけど、仕組みを知っておくと理解が進むでしょ」
 ::: 
 
 ::: voice-daughter
@@ -307,9 +305,7 @@ glm(y ~ x1 + x2, family = poisson(), data = dat)
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-ロジスティック回帰のリンク関数は、ロジット関数以外のものを代わりに使うことができます（これを一般化線型モデルといいます）。リンク関数をうまく指定することによって、オッズ比以外の関連の指標を求められることが知られています。
-
-次の指標のうち、対応するリンク関数がなく、求められないものはどれでしょうか。
+ロジスティック回帰のリンク関数は、ロジット関数以外のものを代わりに使うことができます。リンク関数をうまく指定して確率πを変換することで、オッズ比以外の関連の指標を求められることが知られています。次の指標のうち、対応するリンク関数がなく、求められないものはどれでしょうか。
 
 1.  リスク差
 2.  リスク比
@@ -326,7 +322,7 @@ glm(y ~ x1 + x2, family = poisson(), data = dat)
 
 リスク比を求めるには、g(π)=log⁡(π) つまり対数関数を指定します。
 
-ハザード比を求めるには、g(π)=log{-log⁡(1-π)} つまり補2重対数（complementary log log）関数を指定します。
+ハザード比を求めるには、g(π)=log{-log⁡(1-π)} つまり補2重対数（complementary log-log）関数を指定します。
 :::
 
 
